attempt to fix mobile alignment.  css work on body

--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
 body {
     margin: 0;
     font-size: 20px;
-    /* background: white;*/
     background-image: radial-gradient(rgba(22, 56, 104, 0.9)1px, rgba(9, 33, 68, 0.9) 0);
     background-size: 10px 10px;
     background-position: -10px -10px;
     padding-bottom: 100px;
-    /* background-image: linear-gradient(rgb(55, 106, 245), rgb(55, 100, 160)); */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 100vw;
 }
 
 .canvas {
@@ -35,6 +37,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-content: center;
     gap: 2em;
     padding: 1em;
 }
@@ -103,6 +106,10 @@ nav a {
 }
 
 @media (width <= 768px) {
+    .content {
+        justify-content: center;
+    }
+
     .header img:last-of-type {
         grid-area: 2 / 2 / 6 / 11;
     }
